# ChangeLog for dev-java/lucene
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/lucene/ChangeLog,v 1.34 2007/06/18 17:35:00 flameeyes Exp $

  26 Aug 2007; <alistair@gentoo.org> lucene-2.2.0.ebuild:
  Removed stable keywords.

  18 Jun 2007; Diego Pettenò <flameeyes@gentoo.org> lucene-2.1.0.ebuild:
  Add ~x86-fbsd keyword.

  14 Jun 2007; Christoph Mende <angelos@gentoo.org> lucene-2.1.0.ebuild:
  Stable on amd64 wrt bug 181086

  09 Jun 2007; nixnut <nixnut@gentoo.org> lucene-2.1.0.ebuild:
  Stable on ppc wrt bug 181086

  07 Jun 2007; Christian Faulhammer <opfer@gentoo.org> lucene-2.1.0.ebuild:
  stable x86, bug 181086

  23 May 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Add ~x86-fbsd keyword. Bug #176906.

*lucene-1.4.3-r3 (07 May 2007)

  07 May 2007; Vlastimil Babka <caster@gentoo.org> +lucene-1.4.3-r3.ebuild:
  Revbump to migrate to split-ant; tweak style and add examples USEflag.

*lucene-2.1.0 (22 Apr 2007)

  22 Apr 2007; Vlastimil Babka <caster@gentoo.org> +lucene-2.1.0.ebuild:
  Version bump, new slot, bug #139690. Now installs both lucene-core.jar and
  lucene-demos.jar, because pdfbox needs them. Uses javacc during compile, so
  had to drop ~ia64 and ~x86-fbsd.

  18 Feb 2007; Petteri Räty <betelgeuse@gentoo.org> -lucene-1.4.1.ebuild,
  -lucene-1.4.3.ebuild:
  Removed old versions/revisions.

  21 Jan 2007; Diego Pettenò <flameeyes@gentoo.org> lucene-1.4.3-r2.ebuild:
  Add ~x86-fbsd keyword (see the various bugs for netbeans 5.5-r2).

  18 Jan 2007; Steve Dibb <beandog@gentoo.org> lucene-1.4.3-r2.ebuild:
  amd64 stable, bug 161927

  08 Dec 2006; Petteri Räty <betelgeuse@gentoo.org> lucene-1.4.3-r2.ebuild:
  java-pkg-2.eclass now automatically calls java-pkg_ensure-test so no need to
  use it in ebuilds.

  29 Oct 2006; Petteri Räty <betelgeuse@gentoo.org> lucene-1.4.3-r2.ebuild:
  Now depens on ant-tasks only with the test use flag turned on (bug #110337).
