@@ -1,4 +1,6 @@
+DIST lucene-1.9.1-src.tar.gz 6135056 RMD160 35a65b9337adad253e740821a3bfe09126a2a711 SHA1 b3066cdf62022a25611d0c08b22f9d5d4856aea2 SHA256 a06bd64ce779f3d4e4b539c280f6a882efb2fd8cba4ebbed02a2b6f92658524f
 DIST lucene-2.2.0-src.tar.gz 6054069 RMD160 99357938e62bd9705ca545e1a7ae4e48d4a55402 SHA1 a77f1a5e134580fac1e4af3cea5dd6c4cca03fa3 SHA256 c40372fbe4b586cf715c84194cef83df26bb65cc026aca1c3be22a5e81bd1370
+EBUILD lucene-1.9.1.ebuild 1072 RMD160 c85830dcba2b8186d4028972d4ba01a500bf38d9 SHA1 4c05668ec6f60918c7b63769ba8b41decfd2a1f6 SHA256 0a085fde685fe94ec81a4f99176f91e68cb5e3d653a1786c2b623ed2eb72789a
 EBUILD lucene-2.2.0.ebuild 1774 RMD160 996b5b9494788073eb885b1b30fbb8b8dd8a7fcc SHA1 37fa36c333a37b60b4c751dfadb06288eeb899f7 SHA256 9e99994a65b381411f3a723115123587a51d2aceda70cb9ef250fbb86426e4bc
-MISC ChangeLog 4613 RMD160 3bbdc9ea9add8cea9a6261d77836f686b2a8f451 SHA1 076070739085500a90aac03502011c5e622b8502 SHA256 be20073688c2eba7fa282a8555e0dd804c0f66f557911276ae3609b37f88954d
+MISC ChangeLog 4737 RMD160 c3875f5d2d2abd80cfca6a361a87ce0ac8f522d5 SHA1 9b9bbd13d94aa57666d1e8781f8f5f914256394d SHA256 30ab5109f40ce2ef559f7b1d8f3c5e549a4843b42eae08078b3935efc011034a
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
