@@ -2,6 +2,9 @@
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/dev-java/lucene/ChangeLog,v 1.34 2007/06/18 17:35:00 flameeyes Exp $
 
+  26 Aug 2007; <alistair@gentoo.org> +lucene-1.9.1.ebuild:
+  Version bump lucene.  This version is used in eclipse-sdk-3.3
+
   26 Aug 2007; <alistair@gentoo.org> lucene-2.2.0.ebuild:
   Removed stable keywords.
 
